<resources>
    <string name="app_name">Where is my car ?</string>
    <string name="tv_current_pos">Current position</string>
    <string name="tv_last_pos">Last know position</string>
    <string name="tv_empty_pos">No position</string>
    <string name="btn_save_pos">Save current position</string>
    <string name="btn_share_pos">Share position</string>
    <string name="btn_navigate">Navigate</string>
    <string name="toast_current_location_null">Can\'t find your location</string>
    <string name="txt_sms">Hey, i parked my car at </string>
    <string name="lbl_history">History</string>
    <string name="lbl_dashboard">Dashboard</string>
    <string name="btn_clear_database">Clear database</string>
    <string name="txt_database_restored">Database is restored</string>
    <string name="txt_database_deleted">Database is deleted</string>
</resources>
